--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 
 				<P class="negrito">1. Admissão de empregados/sócios/diretores:</P>
 				<p class="texto"> <span class="negrito">• Inclusão em folha de pagamento: </span> Admissão de
-					empregados/ sócios/ diretores  conforme documentos e informações enviados pelo cliente</p>
+					empregados/ sócios/ diretores conforme documentos e informações enviados pelo cliente</p>
 
 				<p class="texto"> <span class="negrito">• Exames médicos admissional, periódico e demissional: </span>
-					Admissão de
-					Faremos o recebimento dos exames já realizados – agendamento/pagamento será feito pelo cliente</p>
+					Faremos o recebimento dos exames já realizados (ASO) – o agendamento/pagamento é de responsabilidade
+					do cliente</p>
 
 				<p class="texto"> <span class="negrito">• Processo admissão:</span> Ficha de registro, contrato de
 					experiência, termo de VT, termo de responsabilidade, declaração de inexistência ou existência de
@@ -211,8 +211,8 @@
 					atestados de saúde, salários, fechamento – os habituais serão enviados pela prestadora</p>
 
 				<p class="texto"> <span class="negrito"> • Saúde e Segurança do Trabalho: </span>
-					O envio dos eventos de SST deverão ser feito de empresas especializadas como clínicas médicas da
-					saúde ocupacional e segurança do trabalho
+					Os eventos correspondentes ao SST deverão ser enviados por empresas especializadas de Medicina
+					Ocupacional, ou pelo Técnico de Segurança do Trabalho contratado pelo cliente.
 				</p>
 
 				<P class="negrito">3. Folha de Pagamento:</P>
@@ -223,8 +223,8 @@
 					Calcular os encargos sociais, como INSS, FGTS, e IRRF – enviar para o cliente efetuar o pagamento
 				</p>
 				<p class="texto"> <span class="negrito">• Relatório: </span>
-					Envio junto com a folha das informações referente férias e contratos de experiência para o
-					acompanhamento do cliente
+					Serão enviados juntamente com a folha de pagamento mensal relatório contendo as informações
+					referente férias e contratos de experiência dos empregados para acompanhamento do cliente.
 				</p>
 
 
